# polocas-napadu-api

./: .codeclimate.yml  .coveragerc  .gitignore  .pylintrc  Dockerfile  MANIFEST.in  Pipfile  README.md  TODO.md  crontab  db.sqlite3.backup4  deploy.yml  examples.md  gunicorn.py  local-data-fixture.json  local-data-fixture.yaml  local_settings.j2  local_settings.py  manage.py  pyproject.toml  pytest.ini  requirements-ansible.yml  setup.cfg  setup.py  version.py
.circleci/: config.yml
.github/workflows/: ci.yml
accounting/: TODO.md  __init__.py  admin.py  bank_sync.py  local_data.json  schema.py  urls.py  views.py
api/: admin.py  asgi.py  auth.py  consumers.py  routing.py  schema.py  settings.py  urls.py  wsgi.py
api/admin/: __init__.py  (+3 more)
api_admin/: __init__.py  admin.py
bands/: __init__.py  admin.py  apps.py  schema.py
blog/: __init__.py  admin.py  schema.py
emailing/: __init__.py  admin.py  views.py
eshop/: __init__.py  admin.py
events/: __init__.py  apps.py  schema.py
fields/: __init__.py  admin.py  description.py  host.py  name.py  permissions.py  public.py  visibility.py  weight.py
games/: __init__.py  admin.py  schema.py
gsuite/: __init__.py  auth.py  groups.py  views.py
images/: apps.py  fields.py  schema.py  urls.py  views.py
inspirations/: __init__.py  admin.py  schema.py
locations/: __init__.py  admin.py  apps.py  schema.py
management/: admin.py  apps.py
notifications/: __init__.py
orders/: __init__.py  admin.py
photos/: apps.py  schema.py
polocasNapaduBackend/: schema.py  settings.py  urls.py  wsgi.py
profiles/: __init__.py  admin.py  apps.py  schema.py
shows/: __init__.py  admin.py  apps.py  schema.py  urls.py  views.py
theatre_sports/: __init__.py  admin.py  schema.py  signals.py  urls.py  views.py
tickets/: __init__.py  admin.py  schema.py
voting/: __init__.py  admin.py  schema.py
workshops/: __init__.py  schema.py
(+355 files in other folders)
